@@ -1,3 +1,8 @@
+Sun Nov 08 11:27:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/cached_searches.py: Update test for new search
+	  interface.
+
 Sun Nov 08 11:21:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Implement query_cached() to return a
